Attendance Register Module - What's New

### RELEASE 2.4.2 (2013020604)
Fixes
* [#42] DDL bug in fix for #36 that causes error during upgrade on PostgreSQL

### RELEASE 2.4.1 (2013012906)
Fixes
* [#39] Fixed offline session overlapping detection errors 
* [#36] Fixed compatibility issue with Oracle ('online' columns renamed to 'onlinesess')
* Fixed minor typos in Italian translation
* Checked compatibility with Moodle 2.4.1
Improvements
* [#37] Improved performance of cron processing in crowded courses (thanks to MorrisR2)


### RELEASE 2.3.2 (2012100702)
Fixes 
* [#35] Missing 'mod/attendanceregister:addinstance' for Moodle 2.3 compatibility

### RELEASE 2.3.1 (2012081202)
Fixes
* [#33] Incompatibilty with PostgreSQL on updating pendingRecalc flag
* [#34] Error saving Offline Sessions if comments are disabled
* Removed some PHP warning (normally not shown if debug=off)
* Capability explicitely checked when saving an Offiline Session, so an error is
  thrown if a security violation occurs (previously it just didn't save)

New Features
* [#27] Recalculation buttons have been moved to the Settings menu

Minor Changes
* Internal refactoring of view.php, removing some mess

Others
* Verified compatibility with Moodle 2.3.1+ (Build: 20120712)

### RELEASE 2.2.1 (2012081101)

Fixes
* [#30] Offline Sessions Form shown even if Offline Sessions are disabled.
* [#5] Recalculating sessions loose data if old Log Entries have been deleted.

New Features
* [#29] New Capability: 'mod/attendanceregister:addotherofflinesess' allow to add Offline Sessions for other users.
* [#3] Sessions recalculation could be scheduled for execution on next Cron.
* [#12] When Session Timeout setting is changed, automatic recalculation is scheduled.